deleted bundle, added math.js function det

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -25,7 +25,8 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script src="bundle.js" defer></script>
+    <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
+    <script src="det_sarrus.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Determinant rozvoj</title>
   </head>
