added fix for ln(x) plotting + der from it

--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Graf funkcie</title>
   <meta charset="utf-8" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.3.3/math.min.js" integrity="sha512-AZlpUxTyDgo/Ne1TyeXv345mwyAKh646DnZSsEt0GAF7aSFWu94UjCBcgm+yqKyH/6g9boKAzIEMO+wEGc6mJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
   <script src="https://mauriciopoppe.github.io/function-plot/js/function-plot.js"  defer></script>
   <script src="derivative.js"  defer></script>
   <script src="normal.js"></script>
