--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -2,14 +2,50 @@
 
 <head>
   <title>Graf funkcie</title>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
   <script src="https://mauriciopoppe.github.io/function-plot/js/function-plot.js"  defer></script>
   <script src="derivative.js"  defer></script>
   <script src="normal.js"></script>
   <script src="graf.js" defer></script>
+  <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+  <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="styleGraf.css">
+  
 </head>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light ">
+    <div class="container-fluid">
+      <a class="navbar-brand pad" href="../index.html">
+        <img width="40px" id="logo" src="../images/m1.png" alt="M1" /> MATEMATIKA1
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item mx-auto">
+            <a class="nav-link active" aria-current="page" href="#">Graf</a>
+          </li>
+          <li class="nav-item mx-auto">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item mx-auto">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  </nav>
+</header>
 
 <body onload="plot();">
   <h2>Graf funkcie</h2>
@@ -26,12 +62,15 @@
     <p></p>
     <label for="color">Farba: </label> <input type=color id="color" onchange="plot();">
     <p></p>
-    <label for="bodDotyku">Bod dotyku: </label> <input type=number id="bodDotyku" value=1 step=0.1 oninput="plot();">
+    <div id="bod">
+      <label for="bodDotyku">Bod dotyku: </label> 
+    </div>
+    <input type=number id="bodDotyku" value=1 step=0.1 oninput="plot();">
     <p></p>
     <label for="function">Zadajte funkciu: </label>
     <input id="function" type="text" value="sin(x)" onchange="plot();">
     <p></p>
-    <button onclick="plot();">Zobraziť graf</button>
+    <button type="button" onclick="plot();" class="btn btn-outline-info">Zobraziť graf</button>
 
   </section>
 
@@ -44,7 +83,12 @@
     <p id="normala" class="rovnica"> Normála:</p>
     <p class="rovnica">Podľa vzorca: y = f(x0) - (1/ f'(x0)) * (x - x0)</p>
   </div>
-  
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
 </body>
+<footer></footer>
 
 </html>
