--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="mainStyle.css">
     <title>Matematika 1</title>
     <link rel="icon" type="image/png" href="images/m1.png" />
   </head>
@@ -28,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item mx-auto">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/graf_vsetko/index.html">Graf</a>
               </li>
               <li class="nav-item mx-auto">
                 <a class="nav-link" href="#">Features</a>
