responsive plot working

--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -47,7 +47,7 @@
   </nav>
 </header>
 
-<body onload="plot();">
+<body onresize="changeSize();" onload="plot(550);">
   <h2>Graf funkcie</h2>
   <div class="layer">
   <section id="plotSettings">
