--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -67,7 +67,10 @@
     </div>
     <input type=number id="bodDotyku" value=1 step=0.1 oninput="plot();">
     <p></p>
-    <label for="function">Zadajte funkciu: </label>
+    <div>
+     <label for="function">Zadajte funkciu: </label> 
+    </div>
+    
     <input id="function" type="text" value="sin(x)" onchange="plot();">
     <p></p>
     <button type="button" onclick="plot();" class="btn btn-outline-info">Zobraziť graf</button>
