fix start carousel

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <a class="nav-link" aria-current="page" href="/graf_vsetko/index.html">Graf</a>
               </li>
               <li class="nav-item mx-auto">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Matice</a>
               </li>
               <li class="nav-item mx-auto">
-                <a class="nav-link" id="bordered" href="#">Pricing</a>
+                <a class="nav-link" id="bordered" href="#">Funkcie</a>
               </li>
             </ul>
           </div>
@@ -51,7 +51,7 @@
     </header>
     <main>
       <div id="carousel-container">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
