new nav bg + info div

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
       </nav>
     </header>
     <main>
+      <div id="info">
+        <h2><strong>INFO</strong></h2>
+        <p>Vďaka tejto stránke zvládneš predmet </p>
+        <p>Matematika 1 oveľa jednoduchšie.</p>
+        <p>Je určená študentom<strong> GEODÉZIE</strong>. </p>
+      </div>
       <div id="carousel-container">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
