color adjustment and styles applied

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" aria-current="page" href="/graf_vsetko/index.html">Graf</a>
               </li>
               <li class="nav-item mx-auto">
-                <a class="nav-link" href="#">Matice</a>
+                <a class="nav-link" href="#">Lineárna algebra</a>
               </li>
               <li class="nav-item mx-auto">
                 <a class="nav-link" id="bordered" href="#">Funkcie</a>
@@ -54,8 +54,8 @@
     <main>
       <div id="info">
         <h2><strong>INFO</strong></h2>
-        <p>Vďaka tejto stránke zvládneš predmet </p>
-        <p>Matematika 1 oveľa jednoduchšie.</p>
+        <p>Vďaka tejto stránke zvládneš predmet 
+        Matematika 1 oveľa jednoduchšie.</p>
         <p>Je určená študentom<strong> GEODÉZIE</strong>. </p>
       </div>
         <p id="example">
@@ -67,7 +67,7 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">Marek Belis</a>
+        <a class="text-dark" href="#">Marek Belis</a>
       </div>
       <!-- Copyright -->
     </footer>
