--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -60,7 +60,7 @@
     <p></p>
     <label for="yMax">yMax: </label> <input type=number id="yMax" value=6 step=0.5 oninput="plot();">
     <p></p>
-    <label for="color">Farba: </label> <input type=color id="color" onchange="plot();">
+    <label id="farba" for="color">Farba: </label> <input type=color id="color" onchange="plot();">
     <p></p>
     <div id="bod">
       <label for="bodDotyku">Bod dotyku: </label> 
