nav upgrade - graf

--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -35,10 +35,10 @@
             <a class="nav-link active" aria-current="page" href="#">Graf</a>
           </li>
           <li class="nav-item mx-auto">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Lineárna algebra</a>
           </li>
           <li class="nav-item mx-auto">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Funkcie</a>
           </li>
         </ul>
       </div>
