--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" aria-current="page" href="/graf_vsetko/index.html">Graf</a>
               </li>
               <li class="nav-item mx-auto">
-                <a class="nav-link" href="#">Lineárna algebra</a>
+                <a class="nav-link" id="la" href="#">Lineárna algebra</a>
               </li>
               <li class="nav-item mx-auto">
                 <a class="nav-link" id="bordered" href="#">Funkcie</a>
