--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
         Matematika 1 oveľa jednoduchšie.</p>
         <p>Je určená študentom<strong> GEODÉZIE</strong>. </p>
       </div>
-        <p id="example">
-          When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
-          \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
-        </p>
+
+      <div id="box-container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+        
     </main>
-    <footer class="bg-light text-center text-lg-start fixed-bottom">
+    <footer class="bg-light text-center text-lg-start ">
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 Copyright:
