math.js + max and min from function

--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
   <script src="https://mauriciopoppe.github.io/function-plot/js/function-plot.js"  defer></script>
+  <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
   <script src="derivative.js"  defer></script>
   <script src="normal.js"></script>
   <script src="graf.js" defer></script>
