--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -50,11 +50,13 @@
         <input id="15" type="number">
         <input id="16" type="number">
     </div>
-    <label for="riadok">Zadaj riadok:</label>
+    <!-- <label for="riadok">Zadaj riadok:</label>
     <input id="riadok" type="number" />
     <label for="stlpec">Zadaj stlpec:</label>
-    <input id="stlpec" type="number" />
-    <button type="button" id="vypocitaj" class="btn btn-success">Vypocitaj</button>
+    <input id="stlpec" type="number" /> -->
+    <p id="vysledok"></p>
+    <button type="button" id="vypocitaj" class="btn btn-success">Vypočítaj</button>
+
 
   </body>
 </html>
