--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -24,7 +24,7 @@
   
 </head>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light ">
+  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #1c2c34;">
     <div class="container-fluid">
       <a class="navbar-brand pad" href="../index.html">
         <img width="40px" id="logo" src="../images/m1.png" alt="M1" /> MATEMATIKA1
