--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #1c2c34;">
     <div class="container-fluid">
       <a class="navbar-brand pad" href="../index.html">
-        <img width="40px" id="logo" src="../images/m1.png" alt="M1" /> MATEMATIKA1
+        <img width="40px" id="logo" src="../images/m1o.png" alt="M1" /> MATEMATIKA1
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
