minor fixes, favicon added

--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -1,7 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Graf funkcie</title>
+  
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +21,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="styleGraf.css">
-  
+  <title>Graf funkcie</title>
 </head>
 <header>
   <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #1c2c34;">
