--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="mainStyle.css">
     <title>Matematika 1</title>
-    <link rel="icon" type="image/png" href="images/m1.png" />
+    <link rel="icon" type="image/png" href="images/m1o.png" />
   </head>
   <body>
     <header>
