added new bg+ styles, SvF logo, div with mat1+logo

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
         </div>
       </nav>
       </nav>
+      <div id="header-container">
+        <a href="https://www.svf.stuba.sk/"><img src="images/svf_stu.png" alt="SvF logo" style="object-fit: cover; width: 7rem; border-radius: 5px; margin-bottom: 1rem; box-shadow: 2px 2px 2px gray ;"></a>
+        
+        <p style="font-size: 2rem; font-weight: bold ;">MATEMATIKA 1</p><hr><p>určená pre študentov Stavebnej fakulty STU.</p> 
+      </div>
+      
     </header>
     <main>
       <div id="info">
