--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
               <li class="nav-item mx-auto">
                 <a class="nav-link" aria-current="page" href="/graf_vsetko/index.html">Graf</a>
               </li>
+              <li class="nav-item dropdown mx-auto">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Témy
+                </a>
+                <ul class="dropdown-menu dropdown-menu-white" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">Lineárna algebra</a></li>
+                  <li><a class="dropdown-item" href="#">Funkcie</a></li>
+                  <li><a class="dropdown-item" href="#">Kalkulárory</a></li>
+                </ul>
+              </li>
               <li class="nav-item mx-auto">
                 <a class="nav-link" id="la" href="#">Lineárna algebra</a>
               </li>
