--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -37,6 +37,16 @@
           <li class="nav-item mx-auto">
             <a class="nav-link active" aria-current="page" href="#">Graf</a>
           </li>
+          <li class="nav-item dropdown mx-auto">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Témy
+            </a>
+            <ul class="dropdown-menu dropdown-menu-white" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Lineárna algebra</a></li>
+              <li><a class="dropdown-item" href="#">Funkcie</a></li>
+              <li><a class="dropdown-item" href="#">Kalkulárory</a></li>
+            </ul>
+          </li>
           <li class="nav-item mx-auto">
             <a class="nav-link" href="#">Lineárna algebra</a>
           </li>
