--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #1c2c34;">
+      <nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #1c2c34;">
         <div class="container-fluid">
           <a class="navbar-brand pad" href="#">
             <img width="40px" id="logo" src="images/m1o.png" alt="M1" /> MATEMATIKA
