--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -21,6 +21,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="styleGraf.css">
+  <link rel="icon" type="image/png" href="../images/fav.png">
   <title>Graf funkcie</title>
 </head>
 <header>
