--- a/graf_vsetko/index.html
+++ b/graf_vsetko/index.html
@@ -27,16 +27,19 @@
 <header>
   <nav class="navbar navbar-dark navbar-expand-lg" style="background-color: #1c2c34;">
     <div class="container-fluid">
-      <a class="navbar-brand pad" href="../index.html">
-        <img width="40px" id="logo" src="../images/m1o.png" alt="M1" /> MATEMATIKA1
-      </a>
+      <a class="navbar-brand pad" href="../landingPage/index.html">
+        <img width="40px" id="logo" src="../images/m1o.png" alt="M1" /> MATEMATIKA 1
+        </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-auto">
-            <a class="nav-link active" aria-current="page" href="#">Graf</a>
+            <a class="nav-link" aria-current="page" href="../landingPage/index.html">Domov</a>
+          </li>
+          <li class="nav-item mx-auto">
+            <a class="nav-link" aria-current="page" href="../graf_vsetko/index.html">Graf</a>
           </li>
           <li class="nav-item dropdown mx-auto">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,17 +52,15 @@
             </ul>
           </li>
           <li class="nav-item mx-auto">
-            <a class="nav-link" href="#">Lineárna algebra</a>
+            <a class="nav-link" id="la" href="#">Kalkulátory</a>
           </li>
           <li class="nav-item mx-auto">
-            <a class="nav-link" href="#">Funkcie</a>
+            <a class="nav-link" id="bordered" href="#">Kontakt</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  </nav>
-</header>
 
 <body onresize="changeSize();" onload="plot(550);">
   <h2>Graf funkcie</h2>
