added favicon LA page + header div color adjusted

--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -37,6 +37,7 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
     ></script>
+    <link rel="icon" type="image/png" href="../images/fav.png">
     <title>Lineárna algebra</title>
   </head>
   <body>
