added info text

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -125,24 +125,88 @@
     </header>
     <main>
       <div id="main-content">
-        <h3 style="text-align: center">Témy, ktoré tu nájdeš:</h3>
-        <hr>
-        
+        <img src="../images/info.svg" alt="info" style="float: left" />
+        <p id="intro">
+          Na tejto stráke nájdeš študijne materiály, riešené príklady a príklady
+          na počítanie z vybraných tém lineárnej algebry a funkcií jednej
+          reálnej premennej. K niektorým témam sú k dispozícií taktiež
+          "kalkulačky", ktoré ti pomôžu či už pri kontrole výsledku, alebo pre
+          právne navedenie k riešeniu. Pre tému funkcií je k dispozícií
+          vyzualizačný nástroj, pomocou ktorého si môžete vykresliť akúkoľvek
+          funkciu.
+        </p>
+
+        <hr />
+        <h3 style="text-align: center; margin-top: 4rem">
+          Témy, ktoré tu nájdeš:
+        </h3>
         <div id="card-holder">
           <div class="card">
-            <img class="card-img-top" src="../images/matrix.svg" alt="Card image cap">
+            <img
+              class="card-img-top"
+              src="../images/matrix.svg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <h5 class="card-title">Lineárna algebra</h5>
-              <p class="card-text">Základné operácie s maticami, determinant, sústavy rovníc.</p>
+              <p class="card-text">
+                Základné operácie s maticami, determinant, sústavy rovníc.
+              </p>
               <a href="#" class="btn btn-primary">Vybrať</a>
             </div>
           </div>
-          <div class="card" >
-            <img class="card-img-top" src="../images/functions.svg" alt="Card image cap">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="../images/functions.svg"
+              alt="Card image cap"
+            />
             <div class="card-body">
               <h5 class="card-title">Funkcie</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                Funkcie jednej reálnej premennej.
+              </p>
               <a href="#" class="btn btn-primary">Vybrať</a>
+            </div>
+          </div>
+        </div>
+
+        <h3 style="text-align: center">Kalkulačky:</h3>
+        <div id="card-holder">
+          <div class="card" style="width: 18rem">
+            <img class="card-img-top" src="..." alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img class="card-img-top" src="..." alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img class="card-img-top" src="..." alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img class="card-img-top" src="..." alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
             </div>
           </div>
         </div>
