night mode fix nadpis, edited margin main content

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -53,12 +53,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <!-- <li class="nav-item mx-auto" id="NM">
-                <div class="form-check form-switch">
-                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                  <label class="form-check-label" for="flexSwitchCheckDefault" style="color: white;">NIGHT MODE</label>
-                </div>
-              </li> -->
               <li class="nav-item mx-auto">
                 <a
                   class="nav-link"
@@ -90,11 +84,11 @@
                     >
                   </li>
                   <li><a class="dropdown-item" href="#">Funkcie</a></li>
-                  <li><a class="dropdown-item" href="#">Kalkulárory</a></li>
+                  <li><a class="dropdown-item" href="#">Kalkulačky</a></li>
                 </ul>
               </li>
               <li class="nav-item mx-auto">
-                <a class="nav-link" id="la" href="#">Kalkulátory</a>
+                <a class="nav-link" id="la" href="#">Kalkulačky</a>
               </li>
               <li class="nav-item mx-auto">
                 <a class="nav-link" id="bordered" href="#">Kontakt</a>
@@ -145,19 +139,7 @@
     </header>
     <main>
       <div id="main-content">
-        <img src="../images/info.svg" alt="info" style="float: left" />
-        <p id="intro">
-          Na tejto stráke nájdeš študijne materiály, riešené príklady a príklady
-          na počítanie z vybraných tém lineárnej algebry a funkcií jednej
-          reálnej premennej. K niektorým témam sú k dispozícií taktiež
-          "kalkulačky", ktoré ti pomôžu či už pri kontrole výsledku, alebo pre
-          právne navedenie k riešeniu. Pre tému funkcií je k dispozícií
-          vyzualizačný nástroj, pomocou ktorého si môžete vykresliť akúkoľvek
-          funkciu.
-        </p>
-
-        <hr />
-        <h3 style="text-align: center; margin-top: 4rem">
+        <h3 class="nadpis" style="text-align: center; margin-top: 2rem">
           Témy, ktoré tu nájdeš:
         </h3>
         <div id="card-holder">
@@ -191,7 +173,7 @@
           </div>
         </div>
 
-        <h3 style="text-align: center">Kalkulačky:</h3>
+        <h3 class="nadpis" style="text-align: center">Kalkulačky:</h3>
         <div id="card-holder">
           <div class="card" style="width: 18rem">
             <img class="card-img-top" src="..." alt="Card image cap" />
@@ -230,7 +212,19 @@
             </div>
           </div>
         </div>
+        <hr id="line"/>
+        <img src="../images/info.svg" alt="info" style="float: left" />
+        <p id="intro">
+          Na tejto stráke nájdeš študijne materiály, riešené príklady a príklady
+          na počítanie z vybraných tém lineárnej algebry a funkcií jednej
+          reálnej premennej. K niektorým témam sú k dispozícií taktiež
+          kalkulačky, ktoré ti pomôžu či už pri kontrole výsledku, alebo pre
+          správne navedenie k riešeniu. Pre tému funkcií je k dispozícií
+          vizualizačný nástroj, pomocou ktorého si môžete vykresliť akúkoľvek
+          funkciu.
+        </p>
       </div>
+      
     </main>
     <footer class="text-center text-lg-start" style="background-color: #38515e; height: 4rem;">
       <!-- Copyright -->
