added styles and hover LA

--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding: 0">
+      <nav class="navbar navbar-expand-lg" style="padding: 0; background-color: lightblue;">
         <div class="container-fluid">
           <a class="navbar-brand pad" href="../landingPage/index.html">
             <img width="40px" id="logo" src="../images/m1o.png" alt="M1" />
@@ -79,18 +79,18 @@
     <main>
       <h2 id="latitle">Matice</h2>
       <div class="cards">
-        <div class="card">ONE</div>
-        <div class="card">TWO</div>
-        <div class="card">THREE</div>
-        <div class="card">FOUR</div>
-        <div class="card">FIVE</div>
-        <div class="card">SIX</div>
-        <div class="card">SEVEN</div>
-        <div class="card">EIGHT</div>
-        <div class="card">NINE</div>
-        <div class="card">TEN</div>
-        <div class="card">ELEVEN</div>
-        <div class="card">TWELVE</div>
+        <div class="card">ÚVOD</div>
+        <div class="card">RIADKOVÉ OPERÁCIE</div>
+        <div class="card">GAUSSOV TVAR MATICE</div>
+        <div class="card">VÝPOČET GAUSSOVHO TVARU MATICE</div>
+        <div class="card">ALGEBRAICKÉ OPERÁCIE S MATICAMI</div>
+        <div class="card">ŠTVORCOVÉ MATICE: POJEM INVERZNEJ MATICE</div>
+        <div class="card">VÝPOČET INVERZNEJ MATICE</div>
+        <div class="card">DEFINÍCIA DETERMINANTU ŠTVORCOVEJ MATICE</div>
+        <div class="card">DETERMINANT A RIADKOVÉ OPERÁCIE</div>
+        <div class="card">INVERZNÁ MATICA POMOCOU DETERMINANTOV</div>
+        <div class="card">DÔLEŽITÉ VZŤAHY MEDZI UVEDENÝMI POJMAMI</div>
+        <div class="card animated bounce" id="exercise">CVIČENIA</div>
       </div>
       
       
