--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -45,7 +45,7 @@
       <nav class="navbar navbar-expand-lg" style="padding: 0; background-color: lightblue;">
         <div class="container-fluid">
           <a class="navbar-brand pad" href="../landingPage/index.html">
-            <img width="40px" id="logo" src="../images/m1o.png" alt="M1" />
+            <img width="40px" id="logo" src="../images/m1o.png" alt="M1"  />
             Lineárna Algebra</a
           >
           <button
@@ -168,5 +168,13 @@
        
       </div> -->
     </main>
+    <footer class="text-center text-lg-start" style="background-color: lightblue; height: 4rem;">
+      <!-- Copyright -->
+
+      
+        <p style="color: white; margin-bottom: 0; padding-top: 1rem; text-align: center;">© 2023 Copyright: Marek Belis</p>
+      </div>
+      <!-- Copyright -->
+    </footer>
   </body>
 </html>
