changed header bg + night, hover Nightmode-

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -93,8 +93,8 @@
               <li class="nav-item mx-auto">
                 <a class="nav-link" id="bordered" href="#">Kontakt</a>
               </li>
-              <li class="nav-item mx-auto">
-                <div class=" nav-link">
+              <li class="nav-item nav-night mx-auto">
+                <div class=" nav-link" id="nightMode">
                   <div class="form-check form-switch " style="width: 9rem; margin: 0">
                     <input
                     class="form-check-input"
@@ -128,7 +128,7 @@
               width: 7rem;
               border-radius: 5px;
               margin-bottom: 1rem;
-              box-shadow: 2px 2px 2px gray;
+              border: 1px solid orangered;
             "
         /></a>
 
