changed dropdown appearance

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -75,6 +75,7 @@
                 <ul
                   class="dropdown-menu dropdown-menu-white"
                   aria-labelledby="navbarDarkDropdownMenuLink"
+                  style="background-color: #83a0b1;"
                 >
                   <li>
                     <a
