fixed navbar pushing div when collapsing

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -33,7 +33,7 @@
       <div></div>
       <nav
         class="navbar navbar-dark navbar-expand-lg"
-        style="background-color: #1c2c34"
+        style="background-color: #1c2c34;"
       >
         <div class="container-fluid">
           <a class="navbar-brand pad" href="#">
