added new bg - unused + image before footer

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -227,6 +227,7 @@
       </div>
       
     </main>
+    <img src="../images/house.svg" alt="house" style="width: 100px; display: block; margin: auto">
     <footer class="text-center text-lg-start" style="background-color: #38515e; height: 4rem;">
       <!-- Copyright -->
 
