placeholder added into matrix

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -113,7 +113,7 @@
     
             input.type = 'number';
             input.name = `matrix[${i}][${j}]`;
-            input.value = 0;
+            input.placeholder = "0";
             input.style.width = '1.5rem';
             input.style.textAlign = "center";
             input.style.border = "none";
