velkost matice napis

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -72,8 +72,8 @@
       }
     </style>
     <div style="text-align: center;">
-      <label for="matrix-size">Matrix Size:</label>
-    <input style="border: none;border-bottom: 1px solid green" type="number" id="matrix-size" name="matrix-size" value="3" min="1" max="10">
+      <label for="matrix-size">Veľkosť matice:</label>
+    <input style="border: none;border-bottom: 1px solid green; text-align: center;" type="number" id="matrix-size" name="matrix-size" value="3" min="1" max="10">
     
     
     <div style="display: flex; justify-content: center;">
