--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <div></div>
+      
       <nav
         class="navbar navbar-dark navbar-expand-lg"
         style="background-color: #1c2c34;"
@@ -90,7 +90,7 @@
                 </ul>
               </li>
               <li class="nav-item mx-auto">
-                <a class="nav-link" id="la" href="#">Kalkulačky</a>
+                <a class="nav-link" id="la" href="../determinant_sarus/index.html">Kalkulačky</a>
               </li>
               <li class="nav-item mx-auto">
                 <a class="nav-link" id="bordered" href="#">Kontakt</a>
