fixed working det second

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -42,9 +42,9 @@
     </select>
     <div style="display: flex; justify-content: center">
     <table id="matrix" style="outline: none; margin: 1rem;"></table>
-    <p id="mxVysledok" style="margin: auto 0">=</p>
+    <p id="mxVysledok1" style="margin: auto 0">=</p>
   </div>
-    <button id="calcBTN1" type="button" onclick="getMatrix()" class="btn btn-outline-success">
+    <button id="calcBTN1"  type="button" class="btn btn-outline-success">
       Vypočítaj
     </button>
     </div>
