--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -59,7 +59,7 @@
           </div>
         </nav>
         
-        <div class="offcanvas-backdrop backdrop" id="backdr" data-bs-dismiss="offcanvas"></div>
+        <div class="offcanvas-backdrop offcanvas backdrop" id="backdr" data-bs-dismiss="offcanvas"></div>
 
         <div class="offcanvas offcanvas-start fixed-top" tabindex="-1" id="sidebar" style="top: 56px; height: calc(100% - 56px);">
           <div class="offcanvas-header">
