--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -30,7 +30,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed">
+      <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed; border-right: 1px solid lightgray;">
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
@@ -49,7 +49,7 @@
         </div>
       </nav>
       
-      <main class="col-md-12 col-lg-10 offset-md-0 offset-lg-2 " style="margin-top: 3.5rem; height: calc(100vh - 3rem); border: 1px solid red;">
+      <main class="col-md-12 col-lg-10 offset-md-0 offset-lg-2 " style="margin-top: 3.5rem; height: calc(100vh - 3rem);">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
           <div class="container-fluid justify-content-start">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" data-bs-offset="56">
