added text to side nav and styles

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -20,7 +20,7 @@
         <button class="navbar-toggler" id="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" data-bs-backdrop="true">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#" style="margin-left: 1rem;">Lineárna algebra</a>
+        <a class="navbar-brand" href="#" style="margin-left: 1rem;">Matice</a>
       </div>
     </nav>
     
@@ -30,20 +30,51 @@
 
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed; border-right: 1px solid lightgray;">
+      <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed; border-right: 1px solid lightgray; min-width: 200px;">
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Dashboard</a>
+              <a class="nav-link active"  href="../landingPage/index.html"><svg style="margin-bottom: 5px; margin-right: 5px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+              </svg>Domov</a>
+            </li>
+            <hr>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Úvod</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+              <a class="nav-link active" href="#">Riadkové operácie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Orders</a>
+              <a class="nav-link" href="#">Gaussov tvar matice</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Customers</a>
+              <a class="nav-link" href="#">Výpočet gaussovho tvaru matice</a>
+            </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Algebraické operácie s maticami</a>
+          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Štvorcové matice, pojem inverznej matice</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Výpočet inverznej matice</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Definícia determinantu štvorcovej matice</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Determinant a riadkové operácie</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inverzná matica pomocou determinantov</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Dôležité vzťahy medzi uvedenými pojmami</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cvičenia</a>
             </li>
           </ul>
         </div>
