--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -49,7 +49,7 @@
                      <a class="nav-link active" href="#">Úvod</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link active" href="#">Riadkové operácie</a>
+                     <a class="nav-link " href="#">Riadkové operácie</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="#">Gaussov tvar matice</a>
