--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -27,12 +27,6 @@
          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
          rel="stylesheet"
          />
-      <!-- MDB -->
-      <link
-         href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css"
-         rel="stylesheet"
-         />
-      <!-- MDB -->
       <script
          type="text/javascript"
          src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
@@ -42,10 +36,13 @@
    </head>
    <body>
       <header>
-         <nav class="navbar navbar-expand-lg" style="padding: 0; background-color: lightblue;">
+         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(245, 192, 93);">
             <div class="container-fluid">
-               <a class="navbar-brand pad" href="../landingPage/index.html">
-               <img width="40px" id="logo" src="../images/m1o.png" alt="M1"  />
+               <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="../landingPage/index.html">
+                <svg style="margin: 6px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calculator" viewBox="0 0 16 16">
+                  <path d="M12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
+                  <path d="M4 2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-2zm0 4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-4z"/>
+                </svg>
                Lineárna Algebra</a
                   >
                <button
@@ -57,7 +54,7 @@
                   aria-expanded="false"
                   aria-label="Toggle navigation"
                   >
-               <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
@@ -78,7 +75,9 @@
       <main>
          <h2 id="latitle">Matice</h2>
          <div class="cards">
+          <a class="nav-link" href="../determinant_sarus/index.html">
             <div class="card">ÚVOD</div>
+          </a>          
             <div class="card">RIADKOVÉ OPERÁCIE</div>
             <div class="card">GAUSSOV TVAR MATICE</div>
             <div class="card">VÝPOČET GAUSSOVHO TVARU MATICE</div>
