added new cards bg in main page

--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -36,7 +36,7 @@
    </head>
    <body>
       <header>
-         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(245, 192, 93);">
+         <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #f5c05d;">
             <div class="container-fluid">
                <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="../landingPage/index.html">
                 <svg style="margin: 6px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calculator" viewBox="0 0 16 16">
