changed bg in cards landing page

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -148,7 +148,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="../images/matrix.svg"
+              src="../images/LAcard.svg"
               alt="Card image cap"
             />
             <div class="card-body">
@@ -162,7 +162,7 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="../images/functions.svg"
+              src="../images/FNcard.svg"
               alt="Card image cap"
             />
             <div class="card-body">
