--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -34,7 +34,7 @@
       
       <nav
         class="navbar navbar-dark navbar-expand-lg"
-        style="background-color: #1c2c34;"
+        style="background-color: #054363;"
       >
         <div class="container-fluid">
           <a class="navbar-brand pad" href="#">
