--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="mainStyle.css" />
     <title>Matematika 1</title>
-    <link rel="icon" type="image/png" href="../images/fav.png" />
+    <link rel="icon" type="image/png" href="../images/logo.png" />
   </head>
   <body>
     <header>
@@ -38,7 +38,7 @@
       >
         <div class="container-fluid">
           <a class="navbar-brand pad" href="#">
-            <img width="40px" id="logo" src="../images/m1o.png" alt="M1" />
+            <img width="40px" id="logo" src="../images/logo.png" alt="M1" />
             MATEMATIKA 1</a
           >
           <button
