--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -20,7 +20,7 @@
          />
       <script
          type="text/javascript"
-         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
+         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js" defer
          ></script>
       <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
       <script src="det_sarrus.js" defer></script>
@@ -33,7 +33,7 @@
       </header>
       <div class="container-fluid">
       <div class="row">
-         <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed; border-right: 1px solid lightgray; min-width: 220px;">
+         <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed; border-right: 1px solid lightgray; min-width: 220px; overflow-y:auto;">
             <div class="sidebar-sticky">
                <ul class="nav flex-column">
                   <li class="nav-item">
@@ -80,7 +80,7 @@
                      <a class="nav-link" href="#">Dôležité vzťahy medzi uvedenými pojmami</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">Cvičenia</a>
+                     <a class="nav-link" style="margin-bottom: 2rem;" href="#">Cvičenia</a>
                   </li>
                </ul>
             </div>
