--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -191,11 +191,11 @@
                </select>
                <div style="display: flex; justify-content: center">
                   <table id="matrix" style="outline: none; margin: 1rem;"></table>
-                  <p id="mxVysledok1" style="margin: auto 0">=</p>
                </div>
                <button id="calcBTN1"  type="button" class="btn btn-outline-success">
                Vypočítaj
                </button>
+               <p style="width: 100%; display: flex; align-items: center;" id="mxVysledok1" style="margin: auto 0">= </p>
             </div>
             <style>
                #matrix-input td {
