fixed width of main, no longer overlaping

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -85,7 +85,7 @@
                </ul>
             </div>
          </nav>
-         <main class="col-md-12 col-lg-10 offset-md-0 offset-lg-2 " style="margin-top: 3.5rem; height: calc(100vh - 3rem);">
+         <main class="col-md-12 col-lg-10 offset-md-0 offset-lg-2" style="margin-top: 3.5rem; height: calc(100vh - 3rem);">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                <div class="container-fluid justify-content-start">
                   <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" data-bs-offset="56">
@@ -189,9 +189,9 @@
                   <option value="4" selected>4x4</option>
                   <option value="5">5x5</option>
                </select>
-               <div id="mxVysledok1" style="display: flex; align-items: center;">
+               <div  style="display: flex; align-items: center;">
                   <table id="matrix" style="outline: none; margin: 1rem; "></table>
-                  <p style="margin: 0;">=</p>
+                  <p  id="mxVysledok1" style="margin: 0; display: flex; align-items: center;">=</p>
                 </div>
                 
                <button id="calcBTN1"  type="button" class="btn btn-outline-success">
