--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -102,30 +102,31 @@
                   </ul>
                </div>
             </div>
-            <div style="width: 80%; margin: 2rem auto">
-               <ul class="nav nav-tabs nav-fill mb-3" id="ex1" role="tablist">
+            <div class="container my-5">
+               <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                  <li class="nav-item" role="presentation">
-                   <a class="nav-link active" id="ex2-tab-1" data-bs-toggle="tab" href="#ex2-tabs-1" role="tab" aria-controls="ex2-tabs-1" aria-selected="true">Teória</a>
+                   <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button" role="tab" aria-controls="theory" aria-selected="true">Theory</button>
                  </li>
                  <li class="nav-item" role="presentation">
-                   <a class="nav-link" id="ex2-tab-2" data-bs-toggle="tab" href="#ex2-tabs-2" role="tab" aria-controls="ex2-tabs-2" aria-selected="false">Vzorové príklady</a>
+                   <button class="nav-link" id="sample-problems-tab" data-bs-toggle="tab" data-bs-target="#sample-problems" type="button" role="tab" aria-controls="sample-problems" aria-selected="false">Sample Problems</button>
                  </li>
                  <li class="nav-item" role="presentation">
-                   <a class="nav-link" id="ex2-tab-3" data-bs-toggle="tab" href="#ex2-tabs-3" role="tab" aria-controls="ex2-tabs-3" aria-selected="false">Príklady na počítanie</a>
+                   <button class="nav-link" id="practice-problems-tab" data-bs-toggle="tab" data-bs-target="#practice-problems" type="button" role="tab" aria-controls="practice-problems" aria-selected="false">Practice Problems</button>
                  </li>
                </ul>
-               <div class="tab-content" id="ex2-content">
-                 <div class="tab-pane fade show active" id="ex2-tabs-1" role="tabpanel" aria-labelledby="ex2-tab-1">
-                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus tenetur consequatur quam corrupti numquam aspernatur! Error repellendus, dignissimos laboriosam maiores animi rem corrupti magnam assumenda est dolores expedita. Assumenda, soluta!
+               <div class="tab-content" id="myTabContent">
+                 <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
+                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed nulla velit. Morbi viverra libero a neque feugiat lacinia. In consequat, quam vitae vestibulum sollicitudin, ipsum sapien bibendum dolor, id tincidunt nulla urna at dui.</p>
                  </div>
-                 <div class="tab-pane fade" id="ex2-tabs-2" role="tabpanel" aria-labelledby="ex2-tab-2">
-                   Tab 2 content
+                 <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
+                   <p>Tab 2 content</p>
                  </div>
-                 <div class="tab-pane fade" id="ex2-tabs-3" role="tabpanel" aria-labelledby="ex2-tab-3">
-                   Tab 3 content
+                 <div class="tab-pane fade" id="practice-problems" role="tabpanel" aria-labelledby="practice-problems-tab">
+                   <p>Tab 3 content</p>
                  </div>
                </div>
              </div>
+             
              
              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
                integrity="sha384-VsVJ09qrKrxhOJ3m3qZcXzHtvlQbbiYZTdLOhNOG1RPyMGaJw1W8rcltMFhMz2W1"
