changes tabs text

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -105,13 +105,13 @@
             <div class="container my-5">
                <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
                  <li class="nav-item" role="presentation">
-                   <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button" role="tab" aria-controls="theory" aria-selected="true">Theory</button>
+                   <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button" role="tab" aria-controls="theory" aria-selected="true">Teória</button>
                  </li>
                  <li class="nav-item" role="presentation">
-                   <button class="nav-link" id="sample-problems-tab" data-bs-toggle="tab" data-bs-target="#sample-problems" type="button" role="tab" aria-controls="sample-problems" aria-selected="false">Sample Problems</button>
+                   <button class="nav-link" id="sample-problems-tab" data-bs-toggle="tab" data-bs-target="#sample-problems" type="button" role="tab" aria-controls="sample-problems" aria-selected="false">Vypočítané príklady</button>
                  </li>
                  <li class="nav-item" role="presentation">
-                   <button class="nav-link" id="practice-problems-tab" data-bs-toggle="tab" data-bs-target="#practice-problems" type="button" role="tab" aria-controls="practice-problems" aria-selected="false">Practice Problems</button>
+                   <button class="nav-link" id="practice-problems-tab" data-bs-toggle="tab" data-bs-target="#practice-problems" type="button" role="tab" aria-controls="practice-problems" aria-selected="false">Príklady na precvičenie</button>
                  </li>
                </ul>
                <div class="tab-content" id="myTabContent">
